# tapt-wallpaper

./: .gitignore  CMakeLists.txt  README.md
qml/: DetailView.qml  Gallery.qml  GalleryFooter.qml  GalleryGrid.qml  Main.qml
shaders/: lut_filters.frag
src/: main.cpp
src/controllers/: gallerycontroller.cpp  gallerycontroller.h
src/models/: editstate.h  imageItem.h  imagemodel.cpp  imagemodel.h  imagesmodel.cpp  imagesmodel.h  lutfilterslistmodel.cpp  lutfilterslistmodel.h  playlistitem.h  playlistmodel.cpp  playlistmodel.h
src/services/: asyncimageprovider.h  galleryservice.cpp  galleryservice.h  lutimageprovider.h  lutservice.cpp  lutservice.h
src/viewmodels/: detailviewmodel.cpp  detailviewmodel.h  galleryviewmodel.cpp  galleryviewmodel.h  timelineviewmodel.h
